Hero and storage styling changes.

--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-variables.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-variables.scss
@@ -23,6 +23,7 @@ $brand-colour-d2: hsl(88, 50%, 30%);
 $brand-colour-d3: hsl(88, 50%, 20%);
 $brand-colour-d4: hsl(88, 50%, 10%);
 $brand-colour-d5: hsl(88, 50%, 5%);
+$brand-colour-d6: hsl(88, 50%, 2%);
 
 $section-heading-colour: #426020;
 
