--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-recipe-cards.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-recipe-cards.scss
@@ -83,3 +83,8 @@
     object-fit: cover;
     min-height: 100%;
 }
+
+.card .card-title{
+    font-family: $heading-font;
+    letter-spacing: $heading-letter-spacing;
+}
