--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-recipe-page.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-recipe-page.scss
@@ -8,8 +8,11 @@
     */
     .hero-section {
         z-index: -1;
-        background: $brand-colour-d5;
 
+        &.no-hero-image{
+            background-color: $brand-colour-d2;
+        }
+        
         .hero-background-image {
             position: absolute;
             top: 0;
@@ -17,7 +20,7 @@
             width: 100%;
             min-width: 1600px;
             object-fit: cover;
-            z-index:-2;
+            z-index: -2;
 
             &.blurred {
                 -webkit-filter: blur(10px); /* Safari 6.0 - 9.0 */
@@ -29,7 +32,7 @@
         .hero-content {
             padding-top: 84px;
             padding-bottom: 20px;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.33), rgba(0, 0, 0, 0.9));
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), $brand-colour-d6);
         }
 
         h1, h5 {
