--- a/ClassRecipes.Web/Areas/Recipes/Views/Recipe/RecipeCardWithImage.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Recipe/RecipeCardWithImage.cshtml
@@ -9,7 +9,7 @@
 
 <div class="card horizontal">
     <div class="card-image thin-image">
-        @Html.RecipeImage(Model.ThinImage, Model.Title, "materialboxed")
+        @Html.RecipeImage(Model.ThinImage, Model.Title)
         @*<img class="materialboxed" src="/img/chilli-syrup-vertical.jpg" />*@
     </div>
     <div class="card-stacked">
