Start on home page with responsive tags.

--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-variables.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-variables.scss
@@ -18,6 +18,20 @@ $brand-colour-l3: hsl(88, 50%, 80%);
 $brand-colour-l4: hsl(88, 50%, 90%);
 $brand-colour-l5: hsl(88, 50%, 95%);
 
+$brand-colour-half: hsla(88, 50%, 50%, 0.5);
+
+$brand-colour-l1-half: hsla(88, 50%, 60%, 0.5);
+$brand-colour-l2-half: hsla(88, 50%, 70%, 0.5);
+$brand-colour-l3-half: hsla(88, 50%, 80%, 0.5);
+$brand-colour-l4-half: hsla(88, 50%, 90%, 0.5);
+$brand-colour-l5-half: hsla(88, 50%, 95%, 0.5);
+
+$brand-colour-d1-half: hsla(88, 50%, 40%, 0.5);
+$brand-colour-d2-half: hsla(88, 50%, 30%, 0.5);
+$brand-colour-d3-half: hsla(88, 50%, 20%, 0.5);
+$brand-colour-d4-half: hsla(88, 50%, 10%, 0.5);
+$brand-colour-d5-half: hsla(88, 50%, 0.5%, 0.5);
+
 $brand-colour-d1: hsl(88, 50%, 40%);
 $brand-colour-d2: hsl(88, 50%, 30%);
 $brand-colour-d3: hsl(88, 50%, 20%);
