--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-header.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-header.scss
@@ -42,3 +42,93 @@ nav.navbar-material {
         height: 36px;
     }
 }
+
+/*
+        ------------
+        Hero Section
+        ------------
+    */
+.hero-section {
+    z-index: -1;
+
+    &.no-hero-image {
+        background-color: $brand-colour-d2;
+    }
+
+    .hero-background-image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        min-width: 1600px;
+        object-fit: cover;
+        z-index: -2;
+
+        &.blurred {
+            -webkit-filter: blur(10px); /* Safari 6.0 - 9.0 */
+            filter: blur(10px);
+            transform: scale(1.1);
+        }
+    }
+
+    .hero-content {
+        padding-top: 84px;
+        padding-bottom: 20px;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), $brand-colour-d6);
+    }
+
+    h1, h5 {
+        color: #aed581;
+        text-shadow: 0 0 40px black;
+    }
+
+    h1 {
+        font-family: $title-font;
+        font-size: 6rem;
+        transform: rotate(-5deg);
+    }
+
+    @media (max-width: 600px) {
+        h1 {
+            font-size: 4rem;
+        }
+    }
+
+    h5 {
+        font-family: $heading-font;
+        letter-spacing: $heading-letter-spacing;
+    }
+    /* Info */
+    .header-info-with-icons {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        text-align: center;
+
+        h5.header-info-with-icon {
+            display: inline-flex;
+            align-items: center;
+            margin: 0 2rem;
+            color: #cfe8b2;
+        }
+
+        @media (max-width: 750px) {
+            h5.header-info-with-icon {
+                display: block;
+                margin: 15px;
+            }
+
+            h5.header-info-with-icon > span,
+            h5.header-info-with-icon > i {
+                vertical-align: middle;
+            }
+        }
+
+        .header-info-with-icon i {
+            cursor: help;
+        }
+
+        .header-info-with-icon span {
+            margin-left: 10px;
+        }
+    }
+}
