--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/theme-sam.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/theme-sam.scss
@@ -8,3 +8,5 @@
 @import "scss/theme-sam-recipe-page";
 @import "scss/theme-sam-recipe-cards";
 @import "scss/theme-sam-footer";
+@import "scss/theme-sam-home-page";
+@import "scss/theme-sam-tags";
