Refactoring with a chips recipe.

--- a/ClassRecipes.Web/Areas/Common/Views/Shared/_CollectionItem.cshtml
+++ b/ClassRecipes.Web/Areas/Common/Views/Shared/_CollectionItem.cshtml
@@ -11,5 +11,5 @@
 }
 else
 {
-    <li href="#!" class="collection-item"><span class="badge">@Model.Label</span>@Model.Text</li>
+    <li href="#!" class="collection-item"><span title="@Model.Title" class="badge">@Model.Label</span>@Model.Text</li>
 }
