--- a/ClassRecipes.Web/Areas/Common/Views/Shared/_CollectionWithHeader.cshtml
+++ b/ClassRecipes.Web/Areas/Common/Views/Shared/_CollectionWithHeader.cshtml
@@ -16,7 +16,7 @@
         }
         else
         {
-            <li href="#!" class="collection-item"><span class="badge">@item.Label</span>@item.Text</li>
+            <li href="#!" class="collection-item"><span title="@item.Title" class="badge">@item.Label</span>@item.Text</li>
         }
     }
 </ul>
