--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-page.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-page.scss
@@ -43,6 +43,10 @@ html, body {
         padding-top: 20px;
     }
 
+    .badge[title]{
+        cursor:help;
+    }
+    
     @media only screen and (max-width : 600px) {
         .collection-item {
             padding: 5px 10px;
