--- a/ClassRecipes.Web/Areas/Common/scss/materialize/materialize-custom-cards.scss
+++ b/ClassRecipes.Web/Areas/Common/scss/materialize/materialize-custom-cards.scss
@@ -27,3 +27,27 @@
     transition: color .3s ease;
     text-transform: uppercase;
 }
+
+.card {
+    .activator{
+        cursor:pointer;
+    }
+
+    .card-title {
+        &.with-icon {
+            display: flex;
+            min-width: 100%;
+            justify-content: space-between;
+            align-items: flex-end;
+
+            span {
+                display: flex;
+            }
+
+            .material-icons.right {
+                display: flex;
+                margin-bottom: 7px;
+            }
+        }
+    }
+}
