--- a/ClassRecipes.Web/wwwroot/css/base.css
+++ b/ClassRecipes.Web/wwwroot/css/base.css
@@ -61,6 +61,20 @@
   transition: color .3s ease;
   text-transform: uppercase; }
 
+.card .activator {
+  cursor: pointer; }
+
+.card .card-title.with-icon {
+  display: flex;
+  min-width: 100%;
+  justify-content: space-between;
+  align-items: flex-end; }
+  .card .card-title.with-icon span {
+    display: flex; }
+  .card .card-title.with-icon .material-icons.right {
+    display: flex;
+    margin-bottom: 7px; }
+
 .no-margin {
   margin: 0 !important; }
 
