--- a/ClassRecipes.Web/wwwroot/css/sam/theme-sam.css
+++ b/ClassRecipes.Web/wwwroot/css/sam/theme-sam.css
@@ -61,6 +61,20 @@
   transition: color .3s ease;
   text-transform: uppercase; }
 
+.card .activator {
+  cursor: pointer; }
+
+.card .card-title.with-icon {
+  display: flex;
+  min-width: 100%;
+  justify-content: space-between;
+  align-items: flex-end; }
+  .card .card-title.with-icon span {
+    display: flex; }
+  .card .card-title.with-icon .material-icons.right {
+    display: flex;
+    margin-bottom: 7px; }
+
 .no-margin {
   margin: 0 !important; }
 
@@ -311,11 +325,23 @@ html, body {
   font-size: 20px;
   letter-spacing: 2px; }
 
+.food-site .big-action.brand-green.lighten-4:hover {
+  background-color: #cee6b3 !important; }
+
 .food-site .section-button-row {
   padding-top: 20px; }
 
 .food-site .badge[title] {
   cursor: help; }
+
+.food-site .gradient-overlay::after {
+  display: block;
+  position: relative;
+  background-image: linear-gradient(to bottom, transparent 0%, black 100%);
+  margin-top: -150px;
+  height: 150px;
+  width: 100%;
+  content: ''; }
 
 @media only screen and (max-width: 600px) {
   .food-site .collection-item {
@@ -517,21 +543,21 @@ nav.navbar-material {
   .food-site .page-footer .footer-copyright {
     background: #000; }
 
-.home-page .search-bar {
+.search-bar {
   padding: 20px; }
-  .home-page .search-bar .search-area {
+  .search-bar .search-area {
     display: flex;
     align-content: center;
     align-items: center;
     justify-content: center; }
   @media (max-width: 600px) {
-    .home-page .search-bar .search-area {
+    .search-bar .search-area {
       display: block;
       margin-bottom: 20px; } }
-  .home-page .search-bar .row {
+  .search-bar .row {
     padding: 20px 0;
     margin: 0; }
-  .home-page .search-bar .search-label {
+  .search-bar .search-label {
     display: inline;
     font-size: 2rem;
     color: #4f7326;
@@ -539,15 +565,15 @@ nav.navbar-material {
     letter-spacing: 2px;
     margin-right: 10px; }
   @media (max-width: 600px) {
-    .home-page .search-bar .search-label {
+    .search-bar .search-label {
       display: block;
       margin-right: 0; } }
-  .home-page .search-bar i {
+  .search-bar i {
     color: #4f7326; }
   @media (max-width: 600px) {
-    .home-page .search-bar i {
+    .search-bar i {
       display: none; } }
-  .home-page .search-bar input[type=text].search-input {
+  .search-bar input[type=text].search-input {
     display: inline;
     border: none;
     border-bottom: 2px dotted #4f7326;
@@ -560,30 +586,34 @@ nav.navbar-material {
     width: 300px;
     max-width: 400px;
     margin: 0; }
-    .home-page .search-bar input[type=text].search-input:focus {
+    .search-bar input[type=text].search-input:focus {
       border-bottom: 2px solid #4f7326;
       box-shadow: none; }
-    .home-page .search-bar input[type=text].search-input::-webkit-input-placeholder {
+    .search-bar input[type=text].search-input::-webkit-input-placeholder {
       font-weight: normal;
       color: rgba(79, 115, 38, 0.5); }
-    .home-page .search-bar input[type=text].search-input::-moz-placeholder {
+    .search-bar input[type=text].search-input::-moz-placeholder {
       font-weight: normal;
       color: rgba(79, 115, 38, 0.5); }
-    .home-page .search-bar input[type=text].search-input:-ms-input-placeholder {
+    .search-bar input[type=text].search-input:-ms-input-placeholder {
       font-weight: normal;
       color: rgba(79, 115, 38, 0.5); }
-    .home-page .search-bar input[type=text].search-input:-moz-placeholder {
+    .search-bar input[type=text].search-input:-moz-placeholder {
       font-weight: normal;
       color: rgba(79, 115, 38, 0.5); }
   @media (max-width: 600px) {
-    .home-page .search-bar input[type=text].search-input {
+    .search-bar input[type=text].search-input {
       text-align: center; } }
 
-.home-page .home-main {
+.home-main {
   padding-top: 20px; }
-  .home-page .home-main .home-row {
+  .home-main .home-row {
     margin: 0;
     padding: 20px 0; }
+
+.listing-main {
+  padding-top: 20px;
+  padding-bottom: 20px; }
 
 .tags-section {
   margin: 0;
